changed seeders and implemented game detail view
